[gd_scene load_steps=29 format=3 uid="uid://dwgu6kstovqdw"]

[ext_resource type="Script" uid="uid://dh420dxdpyv4l" path="res://scripts/ui.gd" id="1_aqk2v"]
[ext_resource type="Texture2D" uid="uid://d17s63tpdm7vd" path="res://textures/belfast_sunset_puresky_2k.exr" id="1_ikiii"]
[ext_resource type="StyleBox" uid="uid://cfa0fvpfvpmyr" path="res://styles/button_disabled.tres" id="2_70uel"]
[ext_resource type="Script" uid="uid://dpp6yx6nfjbv5" path="res://scripts/ollama_api.gd" id="3_aqk2v"]
[ext_resource type="Script" uid="uid://dhdwv38vr0s53" path="res://scripts/settings_panel.gd" id="3_ioo17"]
[ext_resource type="StyleBox" uid="uid://bcchga1u10d7f" path="res://styles/panel_background.tres" id="3_wse8f"]
[ext_resource type="Script" uid="uid://csy1asdddfau2" path="res://scripts/import_controller.gd" id="5_036b0"]
[ext_resource type="StyleBox" uid="uid://bp6ltq85ixra8" path="res://styles/button_pressed.tres" id="5_ic0uy"]
[ext_resource type="StyleBox" uid="uid://chbj34rjywven" path="res://styles/button_normal.tres" id="6_2o6r5"]
[ext_resource type="StyleBox" uid="uid://j78dxax7baow" path="res://styles/button_hover.tres" id="7_70uel"]
[ext_resource type="Script" uid="uid://gx6afguwf45b" path="res://addons/godot-py-stt/speech-to-text.gd" id="7_pkg7o"]
[ext_resource type="Theme" uid="uid://cq7m8b82el8pt" path="res://styles/theme.tres" id="7_udxuc"]
[ext_resource type="Texture2D" uid="uid://cywhj1yrnt6t1" path="res://textures/mic_off.svg" id="8_2o6r5"]
[ext_resource type="FontVariation" uid="uid://6vmdc8qhv0j7" path="res://styles/ui_font.tres" id="8_2u3nc"]
[ext_resource type="Script" uid="uid://cckvmwmouatal" path="res://scripts/recorder.gd" id="8_gbfbk"]
[ext_resource type="Script" uid="uid://dfucyq2apfvum" path="res://scripts/set_camera_state_button.gd" id="8_wukud"]
[ext_resource type="PackedScene" uid="uid://dssmqqclknldk" path="res://maps/debug_map.tscn" id="12_ikiii"]
[ext_resource type="Script" uid="uid://d3p400dxexd0o" path="res://addons/shared_plugins/nodes/state_machine_controller.gd" id="13_cbp6q"]
[ext_resource type="Script" uid="uid://bxdctw0dthkx7" path="res://addons/shared_plugins/nodes/states/moving_camera_state.gd" id="15_bc84e"]
[ext_resource type="Script" uid="uid://bswnrl4rukbc1" path="res://addons/godot-py-elevenlabs/elevenlabs_request_server.gd" id="16_2u3nc"]
[ext_resource type="Script" uid="uid://vsubxbuhu4bg" path="res://scripts/server_executor.gd" id="17_udxuc"]
[ext_resource type="Script" uid="uid://b3o8e77kix4iu" path="res://addons/shared_plugins/nodes/states/idle_camera_state.gd" id="20_26xuy"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_cbp6q"]
panorama = ExtResource("1_ikiii")
energy_multiplier = 0.3

[sub_resource type="Sky" id="Sky_fj7yv"]
sky_material = SubResource("PanoramaSkyMaterial_cbp6q")

[sub_resource type="Environment" id="Environment_tlwt5"]
background_mode = 2
sky = SubResource("Sky_fj7yv")
tonemap_mode = 3
ssr_enabled = true
ssao_enabled = true
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2o6r5"]
bg_color = Color(0.114897, 0.114897, 0.114897, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_gbfbk"]
color = Color(0.196078, 0.196078, 0.196078, 1)
thickness = 2

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_gbfbk"]

[node name="World" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.258819, 0.836517, -0.482963, -1.88939e-08, 0.5, 0.866026, 0.965926, -0.224143, 0.129409, 0, 1, 0)
light_energy = 2.0
shadow_enabled = true
directional_shadow_max_distance = 400.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tlwt5")

[node name="UI" type="Control" parent="." node_paths=PackedStringArray("ollama_api", "camera")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aqk2v")
ollama_api = NodePath("../OllamaAPI")
camera = NodePath("../Camera3D")
use_closest_chatting_character = true

[node name="ResponseLabel" type="RichTextLabel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -517.0
offset_top = -324.0
offset_right = 517.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_fonts/normal_font = ExtResource("8_2u3nc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HistorySize" type="RichTextLabel" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 305.0
offset_top = -611.0
offset_right = 359.0
offset_bottom = -566.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_fonts/normal_font = ExtResource("8_2u3nc")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SendMessage" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.0
offset_top = 78.0
offset_right = 27.0
offset_bottom = 114.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_2u3nc")
theme_override_styles/disabled = ExtResource("2_70uel")
theme_override_styles/hover = ExtResource("7_70uel")
theme_override_styles/pressed = ExtResource("5_ic0uy")
theme_override_styles/normal = ExtResource("6_2o6r5")
text = "Send Message"

[node name="SetCameraStateButton" type="Button" parent="UI" node_paths=PackedStringArray("state_machine_controller", "state")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 388.0
offset_top = 151.0
offset_right = 570.0
offset_bottom = 187.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_2u3nc")
theme_override_styles/disabled = ExtResource("2_70uel")
theme_override_styles/hover = ExtResource("7_70uel")
theme_override_styles/pressed = ExtResource("5_ic0uy")
theme_override_styles/normal = ExtResource("6_2o6r5")
text = "Overview"
script = ExtResource("8_wukud")
state_machine_controller = NodePath("../../Camera3D/StateMachineController")
state = NodePath("../../Camera3D/StateMachineController/OverviewIdle")

[node name="SetCameraStateButton2" type="Button" parent="UI" node_paths=PackedStringArray("state_machine_controller", "state")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 388.0
offset_top = 193.0
offset_right = 570.0
offset_bottom = 229.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_2u3nc")
theme_override_styles/disabled = ExtResource("2_70uel")
theme_override_styles/hover = ExtResource("7_70uel")
theme_override_styles/pressed = ExtResource("5_ic0uy")
theme_override_styles/normal = ExtResource("6_2o6r5")
text = "Closeup"
script = ExtResource("8_wukud")
state_machine_controller = NodePath("../../Camera3D/StateMachineController")
state = NodePath("../../Camera3D/StateMachineController/CloseUpIdle")

[node name="SetCameraStateButton3" type="Button" parent="UI" node_paths=PackedStringArray("state_machine_controller", "state")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 388.0
offset_top = 234.0
offset_right = 570.0
offset_bottom = 270.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_2u3nc")
theme_override_styles/disabled = ExtResource("2_70uel")
theme_override_styles/hover = ExtResource("7_70uel")
theme_override_styles/pressed = ExtResource("5_ic0uy")
theme_override_styles/normal = ExtResource("6_2o6r5")
text = "Control"
script = ExtResource("8_wukud")
state_machine_controller = NodePath("../../Camera3D/StateMachineController")
state = NodePath("../../Camera3D/StateMachineController/MovingCameraState")

[node name="ClearHistory" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 31.0
offset_top = 78.0
offset_right = 123.0
offset_bottom = 114.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_2u3nc")
theme_override_styles/disabled = ExtResource("2_70uel")
theme_override_styles/hover = ExtResource("7_70uel")
theme_override_styles/pressed = ExtResource("5_ic0uy")
theme_override_styles/normal = ExtResource("6_2o6r5")
text = "Reset"

[node name="MessageEdit" type="TextEdit" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -191.0
offset_top = 42.0
offset_right = 303.0
offset_bottom = 74.0
grow_horizontal = 2
theme = ExtResource("7_udxuc")
theme_override_styles/normal = SubResource("StyleBoxFlat_2o6r5")
placeholder_text = "Prompt"

[node name="UserEdit" type="TextEdit" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -318.0
offset_top = 42.0
offset_right = -195.0
offset_bottom = 74.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2o6r5")
placeholder_text = "Username"

[node name="ModelNameEdit" type="TextEdit" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -318.0
offset_top = 5.0
offset_right = -60.0
offset_bottom = 37.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2o6r5")
text = "nemotron-mini:4b"
placeholder_text = "LLM Model"

[node name="SystemPromptEdit" type="TextEdit" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 5.0
offset_right = 304.0
offset_bottom = 37.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2o6r5")
placeholder_text = "System Prompt"

[node name="SettingsPanel" type="Panel" parent="UI" node_paths=PackedStringArray("button")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = -199.0
offset_right = 275.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_wse8f")
script = ExtResource("3_ioo17")
button = NodePath("../SettingsButton")

[node name="ImportModel" type="Button" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = 74.0
offset_right = 78.5
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_2u3nc")
theme_override_styles/hover = ExtResource("7_70uel")
theme_override_styles/pressed = ExtResource("5_ic0uy")
theme_override_styles/normal = ExtResource("6_2o6r5")
text = "Import Avatar"

[node name="ImportMap" type="Button" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = 27.0
offset_right = 78.5
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_2u3nc")
theme_override_styles/hover = ExtResource("7_70uel")
theme_override_styles/pressed = ExtResource("5_ic0uy")
theme_override_styles/normal = ExtResource("6_2o6r5")
text = "Import Map"

[node name="SettingsLabel" type="RichTextLabel" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.018
anchor_top = 0.025
anchor_right = 0.896
anchor_bottom = 0.184
offset_left = -0.00800037
offset_top = -0.0500002
offset_right = -0.176025
offset_bottom = 0.111996
focus_mode = 0
theme_override_fonts/normal_font = ExtResource("8_2u3nc")
theme_override_font_sizes/normal_font_size = 32
text = "SETTINGS"

[node name="SettingsLabel2" type="RichTextLabel" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.018
anchor_top = 0.025
anchor_right = 0.896
anchor_bottom = 0.184
offset_left = 0.0460005
offset_top = 59.95
offset_right = 47.512
offset_bottom = 49.752
focus_mode = 0
theme_override_fonts/normal_font = ExtResource("8_2u3nc")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "PRESS 'END' TO TOGGLE MICROPHONE"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.013
anchor_top = 0.17
anchor_right = 1.0
anchor_bottom = 0.17
offset_left = -0.0430002
offset_top = -1.94
offset_right = -4.0
offset_bottom = 2.06
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/separator = SubResource("StyleBoxLine_gbfbk")

[node name="CloseButton" type="Button" parent="UI/SettingsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.5
offset_top = -42.0
offset_right = 62.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_2u3nc")
theme_override_styles/hover = ExtResource("7_70uel")
theme_override_styles/pressed = ExtResource("5_ic0uy")
theme_override_styles/normal = ExtResource("6_2o6r5")
text = "Close"

[node name="SettingsButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 15.0
offset_top = 12.0
offset_right = 86.0
offset_bottom = 62.0
theme_override_fonts/font = ExtResource("8_2u3nc")
theme_override_styles/hover = ExtResource("5_ic0uy")
theme_override_styles/pressed = ExtResource("7_70uel")
theme_override_styles/normal = ExtResource("6_2o6r5")
text = "Settings"

[node name="RecordingIcon" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -37.0
offset_right = 39.0
offset_bottom = -13.0
grow_vertical = 0
texture = ExtResource("8_2o6r5")

[node name="Map" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="DebugMap" parent="Map" instance=ExtResource("12_ikiii")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, -2.18557e-08, -5.85625e-09, 2.18557e-08, 0.866025, 0.5, -5.85619e-09, -0.5, 0.866025, 0, 3.29, 4.923)

[node name="StateMachineController" type="Node" parent="Camera3D" node_paths=PackedStringArray("current_state")]
script = ExtResource("13_cbp6q")
current_state = NodePath("OverviewIdle")
metadata/_custom_type_script = "uid://d3p400dxexd0o"

[node name="OverviewIdle" type="Node" parent="Camera3D/StateMachineController" node_paths=PackedStringArray("idle_position")]
script = ExtResource("20_26xuy")
idle_position = NodePath("Marker3D")
metadata/_custom_type_script = "uid://b3o8e77kix4iu"

[node name="Marker3D" type="Marker3D" parent="Camera3D/StateMachineController/OverviewIdle"]
transform = Transform3D(1, 0, 0, 0, 0.819152, 0.573576, 0, -0.573576, 0.819152, 0, 3.3, 4.9)

[node name="CloseUpIdle" type="Node" parent="Camera3D/StateMachineController" node_paths=PackedStringArray("idle_position")]
script = ExtResource("20_26xuy")
idle_position = NodePath("Marker3D")
metadata/_custom_type_script = "uid://b3o8e77kix4iu"

[node name="Marker3D" type="Marker3D" parent="Camera3D/StateMachineController/CloseUpIdle"]
transform = Transform3D(1, 0, 0, 0, 0.996195, 0.0871557, 0, -0.0871557, 0.996195, 0, 1.27591, 3.11762)

[node name="MovingCameraState" type="Node" parent="Camera3D/StateMachineController" node_paths=PackedStringArray("fallback_state")]
script = ExtResource("15_bc84e")
fallback_state = NodePath("../OverviewIdle")
metadata/_custom_type_script = "uid://bxdctw0dthkx7"

[node name="SpeechToText" type="Node3D" parent="." node_paths=PackedStringArray("update_label", "ui", "llm_api")]
script = ExtResource("7_pkg7o")
file_path = "/home/soda/.local/share/godot/app_userdata/little-kota-godot/player_dialogue.wav"
update_label = NodePath("../UI/ResponseLabel")
ui = NodePath("../UI")
llm_api = NodePath("../OllamaAPI")
metadata/_custom_type_script = "uid://gx6afguwf45b"

[node name="Recorder" type="AudioStreamPlayer3D" parent="." node_paths=PackedStringArray("ui", "chat_api", "recording_icon")]
stream = SubResource("AudioStreamMicrophone_gbfbk")
autoplay = true
bus = &"Record"
script = ExtResource("8_gbfbk")
ui = NodePath("../UI")
chat_api = NodePath("../OllamaAPI")
recording_icon = NodePath("../UI/RecordingIcon")

[node name="ImportController" type="Node" parent="." node_paths=PackedStringArray("file_dialog", "model_root", "map_root", "ui", "ollama_api")]
script = ExtResource("5_036b0")
file_dialog = NodePath("FileDialog")
model_root = NodePath("ModelRoot")
map_root = NodePath("../Map")
ui = NodePath("../UI")
ollama_api = NodePath("../OllamaAPI")

[node name="FileDialog" type="FileDialog" parent="ImportController"]
title = "Open a File"
initial_position = 1
ok_button_text = "Load"
file_mode = 0
access = 1
filters = PackedStringArray("*.pck ; PCK File")
use_native_dialog = true

[node name="ModelRoot" type="Node3D" parent="ImportController"]

[node name="OllamaAPI" type="Node" parent="."]
script = ExtResource("3_aqk2v")
ollama_model_name = "gemma3:4b"
system_prompt = "test"
update_history = true

[node name="ElevenlabsAPI" type="Node" parent="." node_paths=PackedStringArray("ollama_api")]
script = ExtResource("16_2u3nc")
ollama_api = NodePath("../OllamaAPI")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="ElevenlabsAPI"]

[node name="ServerExecutor" type="Node" parent="."]
script = ExtResource("17_udxuc")

[connection signal="pressed" from="UI/SendMessage" to="UI" method="_on_send_message_pressed"]
[connection signal="pressed" from="UI/SetCameraStateButton" to="UI/SetCameraStateButton" method="_on_pressed"]
[connection signal="pressed" from="UI/SetCameraStateButton2" to="UI/SetCameraStateButton2" method="_on_pressed"]
[connection signal="pressed" from="UI/SetCameraStateButton3" to="UI/SetCameraStateButton3" method="_on_pressed"]
[connection signal="pressed" from="UI/ClearHistory" to="UI" method="_on_clear_history_pressed"]
[connection signal="pressed" from="UI/SettingsPanel/ImportModel" to="ImportController" method="_on_import_model_pressed"]
[connection signal="pressed" from="UI/SettingsPanel/ImportMap" to="ImportController" method="_on_import_map_pressed"]
[connection signal="pressed" from="UI/SettingsPanel/CloseButton" to="UI/SettingsPanel" method="_on_close_button_pressed"]
[connection signal="pressed" from="UI/SettingsButton" to="UI/SettingsPanel" method="_on_settings_button_pressed"]
[connection signal="file_selected" from="ImportController/FileDialog" to="ImportController" method="_on_file_dialog_file_selected"]
